exemples/keycloak/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: keycloak
  name: keycloak 
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: jboss/keycloak:12.0.3
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080
            - containerPort: 8443
