exemples/keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: NodePort
  selector:
    app: keycloak
  ports: 
    - port: 80
      targetPort: 8080
      protocol: TCP
